--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '1804451098';
+    var serviceWorkerVersion = '2827144117';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <script src="main.dart.js" type="application/javascript"></script>.
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
