--- a/index.html
+++ b/index.html
@@ -24,23 +24,22 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="wesley_ideas">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="./icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>wesley_ideas</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="./manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '2827144117';
+    var serviceWorkerVersion = '413974722';
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
+  <script src="./flutter.js" defer></script>
 </head>
 <body>
-  <script src="main.dart.js" type="application/javascript"></script>.
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
@@ -53,7 +52,9 @@
       }).then(function(appRunner) {
         return appRunner.runApp();
       });
+      
     });
   </script>
+  <script src="./main.dart.js" defer></script>
 </body>
 </html>
